src/objects/SuFrist13006__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist__c</fullName>
        <label>picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.a</fullName>
                </value>
                <value>
                    <fullName>2.b</fullName>
                </value>
                <value>
                    <fullName>3.c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vij13006__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>tests</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SuFrist13006s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SuFrist13006</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SuFrist13006 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SuFrist13006s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>